--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Excel Sheet</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <div></div>
+    </div>
   </body>
 </html>
